--- a/src/plugin.infologique.tou.tv/changelog.txt
+++ b/src/plugin.infologique.tou.tv/changelog.txt
@@ -1,20 +1,20 @@
 2.0.1
-- Possibilité de supprimer des émissions en extra
-- Réparrer un bug qui empêchait de lire les "unique-content"
+- PossibilitÃ© de supprimer des Ã©missions en extra
+- RÃ©parrer un bug qui empÃªchait de lire les "unique-content"
 - Autres bug divers
 
 2.0beta1
-- Sauvegarde des émissions écoutés sur un serveur
-- Synchro des favoris du site officiel (en développement)
+- Sauvegarde des Ã©missions Ã©coutÃ©s sur un serveur
+- Synchro des favoris du site officiel (en dÃ©veloppement)
 - Choix du flux RSTP/HLS
-- Reprise de l'émission à l'emplacement laissée et ce, sur tous les Kodi de la maison
-- Liste des émissions "en cours d'écoute" un peu à la netflix
-- Biensûr le contenu EXTRA est disponible pour les abonnés
-- Image 720p même pour ceux qui ne sont pas abonnés EXTRA
-- Refonte des menus pour refléter le site officiel
+- Reprise de l'Ã©mission Ã  l'emplacement laissÃ©e et ce, sur tous les Kodi de la maison
+- Liste des Ã©missions "en cours d'Ã©coute" un peu Ã  la netflix
+- BiensÃ»r le contenu EXTRA est disponible pour les abonnÃ©s
+- Image 720p mÃªme pour ceux qui ne sont pas abonnÃ©s EXTRA
+- Refonte des menus pour reflÃ©ter le site officiel
 
 1.0.11
-- Première version infologique dans mon repo.
+- PremiÃ¨re version infologique dans mon repo.
 
 1.0.9
 - Use HLS with new kodi support to play in 720p
